replaced clazz.newInstance() with clazz.getDeclaredConstructor().newInstance()
in DefaultTypeHandler the call to newInstance() is deprecated

https://docs.oracle.com/javase/9/docs/api/java/lang/Class.html#newInstance--